2.4.15
- Fix genesis

2.4.14
- Fix Stat Container
- Allow repeated-slot artifact entries to apply stat

2.4.13
- Switch to new Curios API

2.4.12
- Add random artifact loot pool through NBT
- Make all stat types config driven
- Fix quick swap scrolling and UI conflict with L2Backpack
- Fix upgrade / augment display when switching artifacts to upgrade
- Buff lower rank artifacts

2.4.8
- Fix artifact not being able to be taken out without page refresh when putting them in pocket for the first time
- Fix Genesis eating items when clicking empty output slot.

2.4.7
- Fix screen text rendering
- Fix saint set