@@ -13,7 +13,7 @@ jei_version = 15.2.0.27
 curios_version = 5.3.4+1.20.1
 
 modid = l2artifacts
-ll_version = 2.4.15-pre0
+ll_version = 2.4.15
 lljij = true
 rootMod = false
 
