@@ -1,5 +1,7 @@
 2.4.15
-- Fix genesis
+- Fix genesis not generating output
+- Fix compatibility with other mods
+- Fix Genesis double output
 
 2.4.14
 - Fix Stat Container
